--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 deploy.ant.properties.file=/Users/jameszach/Library/Application Support/NetBeans/8.1/tomcat80.properties
 j2ee.server.home=/Applications/tomcat-8.0
 j2ee.server.instance=tomcat80:home=/Applications/tomcat-8.0
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=/Users/jameszach/Library/Application Support/NetBeans/8.1/build.properties
