--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=/Users/jameszach/Library/Application Support/NetBeans/8.1/tomcat80.properties
-j2ee.server.home=/Applications/tomcat-8.0
-j2ee.server.instance=tomcat80:home=/Applications/tomcat-8.0
+deploy.ant.properties.file=/Users/swebber2/Library/Application Support/NetBeans/8.1/tomcat80.properties
+j2ee.server.home=/usr/local/Cellar/tomcat/8.0.35/libexec
+j2ee.server.instance=tomcat80:home=/usr/local/Cellar/tomcat/8.0.35/libexec
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/Users/jameszach/Library/Application Support/NetBeans/8.1/build.properties
+user.properties.file=/Users/swebber2/Library/Application Support/NetBeans/8.1/build.properties
